<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">
    <EditText
        android:hint="@string/title"
        android:id="@+id/title_edt"
        style="@style/edit_text_style" />
    <EditText
        android:hint="@string/content"
        android:id="@+id/content_edt"
        style="@style/edit_text_style"/>
    <EditText
        android:hint="@string/user"
        android:id="@+id/user_edt"
        android:inputType="number"
        style="@style/edit_text_style"/>
    <EditText
        android:hint="@string/group"
        android:id="@+id/group_edt"
        android:inputType="number"
        style="@style/edit_text_style"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/continue_btn"
        android:layout_margin="16dp"
        android:text="@string/continue1"/>
</LinearLayout>